<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/connection_category_pref_title"
        android:summary="@string/connection_category_pref_summary"
        >
        <EditTextPreference
            android:defaultValue="0.0.0.0"
            android:key="host_pref"
            android:singleLine="true"
            android:title="@string/host_pref_title"></EditTextPreference>

        <EditTextPreference
            android:defaultValue="3312"
            android:key="port_pref"
            android:singleLine="true"
            android:title="@string/port_pref_title"></EditTextPreference>

        <EditTextPreference
            android:key="connection_timeout_pref"
            android:defaultValue="30"
            android:singleLine="true"
            android:title="@string/connection_timeout_pref_title"></EditTextPreference>

        <EditTextPreference
            android:key="reconnect_attempts_pref"
            android:defaultValue="0"
            android:singleLine="true"
            android:title="@string/reconnect_attempts_pref_title"></EditTextPreference>

        <EditTextPreference
            android:defaultValue="1.8"
            android:key="version_pref"
            android:singleLine="true"
            android:title="@string/version_pref_title"></EditTextPreference>

        <EditTextPreference
            android:defaultValue="Administrator"
            android:key="login_pref"
            android:singleLine="true"
            android:title="@string/login_pref_title"></EditTextPreference>

        <EditTextPreference
            android:key="pwd_pref"
            android:singleLine="true"
            android:title="@string/pwd_pref_title"></EditTextPreference>

        <EditTextPreference
            android:key="db_name_pref"
            android:defaultValue="tc-db-main"
            android:singleLine="true"
            android:title="@string/db_name_pref_title"></EditTextPreference>


    </PreferenceScreen>

    <EditTextPreference
        android:key="controller_pref"
        android:singleLine="true"
        android:title="@string/controller_pref_title"></EditTextPreference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/direction_entries_list"
        android:entryValues="@array/direction_entryvalues_list"
        android:key="direction_pref"
        android:summary="%s"
        android:title="@string/direction_pref_title"></ListPreference>

    <EditTextPreference
        android:key="message_delay_pref"
        android:singleLine="true"
        android:defaultValue="3000"
        android:title="@string/message_delay_pref_title"/>

    <CheckBoxPreference
        android:key="enable_voice_pref"
        android:defaultValue="false"
        android:title="@string/enable_voice_pref_title"></CheckBoxPreference>

</PreferenceScreen>
